--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,13 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script defer src="https://js.stripe.com/v3/"></script>
+    <script defer src="{% static 'js/script.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
+    <title>Do It for Duvy</title>
 </head>
 <body>
     <h1>Welcome</h1>
