--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -2,4 +2,25 @@
 
 {% block content %}
 <h2>Main Page</h2>
+
+    <form action="{% url 'donate' %}" method="post" id="payment-form">
+        {% csrf_token %}
+        <input type="text" name="email" placeholder="Email">
+        <input type="text" name="name" placeholder="Name">
+        
+        <div class="form-row">
+            <label for="card-element">
+            Credit or debit card
+            </label>
+            <div id="card-element">
+            <!-- A Stripe Element will be inserted here. -->
+            </div>
+
+            <!-- Used to display form errors. -->
+            <div id="card-errors" role="alert"></div>
+        </div>
+
+        <button>Submit Payment</button>
+    </form>
+
 {% endblock %}
