--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     <script defer src="https://js.stripe.com/v3/"></script>
     <script defer src="{% static 'js/script.js' %}"></script>
     <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
+    <link rel="stylesheet" href="https://unpkg.com/tachyons@4.12.0/css/tachyons.min.css"/>
     <title>Do It for Duvy</title>
 </head>
 <body>
